--- a/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
+++ b/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
@@ -4,9 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            padding: 0;
+            margin: 0;
+        }
+
+        html,body{
+            height: 100%;
+            width: 100%;
+        }
+
+        body{
+            display: flex;
+            align-items: start;
+            justify-content: center;
+        }
+
+
+        .bjs{
+            width: 100%;
+            background-color: green;
+            padding: 10px 20px;
+            /* border-radius: 10px; */
+            color: yellow;
+            text-shadow: 1px 1px red;
+            font-size: 50px;
+            text-align: center;
+            border: 2px solid yellow;
+            font-weight: 300;
+            text-transform: capitalize;
+        }
+    </style>
 </head>
 <body>
-    <h3>basic of javascript</h3>
+    <h3 class="bjs">basic of javascript</h3>
     
 
 
@@ -242,6 +274,16 @@
                         console.log(`grether 5 and less then 8 of ${arrCo[i]}`)
                     }else{
                         console.log("not match")
+                    }
+                });
+
+
+                // nested condition
+                arrCo.forEach((i) => {
+                    if(i % 2 === 0){
+                        if(i > 5){
+                            console.log("greter then 5 ",i)
+                        }
                     }
                 });
 
