--- a/Javascript/JAVASCRIPT/BASIC OF JS/revision js/revision of js/array.html
+++ b/Javascript/JAVASCRIPT/BASIC OF JS/revision js/revision of js/array.html
@@ -28,11 +28,12 @@
         console.log(arr)
 
 
-        // marge array value 
+        // marge array value
+        var arr = [1,3,5,6,7,7,8]
         var arr2 = [22,44,66,33]
 
         var newarr = arr.concat(arr2)
-        console.log(newarr)
+        console.log(newarr) /// Output: [22, 1, 550, 7, 7, 8, 55, 23, 22, 22, 44, 66, 33]
 
 
         // update value
