practise function in javascript

--- a/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
+++ b/Javascript/JAVASCRIPT/BASIC OF JS/revission js basic nov-24/js basic.html
@@ -495,6 +495,10 @@
 
                 // A function used with the new keyword to create objects.
 
+                // Simple Definition:
+                // A constructor function is used to create and initialize new objects with shared properties and methods.
+                //  Use the new keyword to call it.
+
                 function Cost(){
                     this.name = "shubham",
                     this.age = 27,
