--- a/CSS/final_project/index.html
+++ b/CSS/final_project/index.html
@@ -66,7 +66,7 @@
         <section>
             <h2><span>Courses</span></h2>
             <!-- Flickity HTML init -->
-            <div class="carousel"data-flickity='{ "wrapAround": true }'>
+            <div class="carousel"data-flickity='{ "autoPlay": true }'>
             <div class="carousel-cell"><video src="video/video2.mp4" poster="notes/2.jpg" controls></video></div>
             <div class="carousel-cell"><video src="video/video2.mp4" poster="notes/2.jpg" controls></video></div>
             <div class="carousel-cell"><video src="video/video2.mp4" poster="notes/2.jpg" controls></video></div>
