start new project in react

--- a/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/conditionStatement.html
+++ b/Javascript/JAVASCRIPT/InterView prapation/practise-nov-24/conditionStatement.html
@@ -570,6 +570,22 @@
         };
 
 
+        let bags  = "americaltruris";
+
+        switch(bags){
+            case "americaltruris":
+            case "americanTrueris2":
+                console.log("westside brands")
+                break
+            case "skybag":
+            case "dell bags":
+                console.log("indian brands")
+                break
+            default:
+                console.log("other brands")
+        };
+
+
 
 
         // 11. Question: How can you use a conditional(ternary) operator to assign a default value if a variable is undefined ? Answer :
@@ -607,6 +623,14 @@
         let resMobile = Mobile !== undefined ? Mobile : "not defind";
 
         console.log("result", resMobile);
+
+
+
+        let shubham = "shubham";
+
+        let storeRe = shubham != undefined ? shubham : "not found";
+
+        console.log("%%%%%%%%%%%%%%%%%",storeRe);
 
 
 
@@ -778,6 +802,17 @@
 
                 }
             };
+        };
+
+
+        for(let i = 2; i <= 20; i++){
+            if(i % 2 === 0){
+                if(i > 14){
+                    console.log("greter then 14 and even value", i)
+                }else{
+                    console.log("less then 14 values", i)
+                }
+            }
         };
 
 
