--- a/CSS/10. Grid in css/grid revision.html
+++ b/CSS/10. Grid in css/grid revision.html
@@ -14,8 +14,8 @@
             /* grid-template-columns: 1fr 1fr 1fr; */
             grid-template-columns:repeat(5,1fr);
             /* grid-template-columns: repeat(auto-fill,minmax(100px, 1fr)); */
-            /* grid-template-columns: minmax(100px,auto);
-            grid-template-rows: minmax(50px,auto); */
+            /* grid-template-columns: minmax(100px,auto); */
+            /* grid-template-rows: minmax(50px,auto); */
             grid-gap: 10px;
         }
 
