--- a/CSS/10. Grid in css/practice_grid1.html
+++ b/CSS/10. Grid in css/practice_grid1.html
@@ -14,8 +14,8 @@
             /* grid-template-columns: repeat(4 ,1fr); */
             /* grid-template-columns: repeat(auto-fill,minmax(200px 1fr)); */
             grid-gap: 20px;
-            grid-auto-columns: minmax(50px ,auto);
-            grid-auto-rows: minmax(100px ,auto);
+            /* grid-auto-columns: minmax(200px ,auto); */
+            grid-auto-rows: minmax(200px ,auto);
 
         }
         
