--- a/reactjs/react practise/ReactProject2/frontend/index.html
+++ b/reactjs/react practise/ReactProject2/frontend/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   </head>
   <body style="background-color: #373636;">
     <div id="root"></div>
+
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
